KSC Extended V3.0 Support
#7

--- a/GameData/ContractPacks/JNSQ-KSRGAP/Flights/02 - LandingRights.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Flights/02 - LandingRights.cfg
@@ -63,12 +63,14 @@ CONTRACT_TYPE
 	}
 
     // Landing rights stops being available when all 15 airpports have been flown to successfully
+		
+	
 	REQUIREMENT
 	{
 		name = Expression
 		type = Expression
-		title = Landing Rights Progress Has Not Finished
-		expression = $jksrgapLandingRights <= @JKSRGAP:siteProgresMax 
+		title = Flight Progess Check Has Not Finished
+		expression = $jksrgapLandingRights <= @JKSRGAP:siteProgresMax
 	}
 
 
@@ -139,7 +141,7 @@ CONTRACT_TYPE
 
 
 // Variables for Flight progress Sync
-	DATA 
+	DATA
 	{
 		// have we reached maximum flight progress?
 		type = bool
