--- a/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Groups.cfg
@@ -16,13 +16,28 @@ CONTRACT_GROUP
 	maxSimultaneous = 0
 	maxCompletions = 0
 
-	DATA
+	DATA:NEEDS[!KSCExtended] 
 	{
-		// Values for site progression and contract avaliability for all missions 
+		// Values for site progression 
 		type = int
 		// Base 0 = the KSC and is only used as the starting and ending location for flights
 		// how many bases are active for Landing Rights
 		siteProgresMax = 18
+	}
+	
+	DATA:NEEDS[KSCExtended] 
+	{
+		// Values for site progression 
+		type = int
+		// Base 0 = the KSC and is only used as the starting and ending location for flights
+		// how many bases are active for Landing Rights
+		siteProgresMax = 19
+	}
+	
+	DATA
+	{
+		// Values for contract avaliability for all missions 
+		type = int
 		// What base can small Commercial flights start flying to?
 		siteComm1Start = 1
 		// What base can medium and large Commercial flights, cargo flights and Multi-sites fly to? 
@@ -37,27 +52,27 @@ CONTRACT_GROUP
 	DATA
     {
         type = List<string>
-		siteFullName = ["Kerbin Space Center","AirBase Boneyard","Welcome Island Airport","Smusgrave Airport","Island Airfield","AirBase S05A","CMcAuliffe Airport","AirBase S24A","AirBase N46A","Darude Airport","YGagarin Airport","AirBase S72A","AirBase S37A","Airbase N76A","AirBase S00A","AirBase N32A","C. Yeager Airport","AirBase S28A","VTereshkova Airport"]
-		siteName = ["KSC","Boneyard","Welcome Island","Smusgrave","the Island","S05A","CMcAuliffe","S24A","N46A","Darude","YGagarin","S72A","S37A","N76A","S00A","N32A","C. Yeager","S28A","VTereshkova"]
-		siteFlightNumBase = ["J0","J10","J11","J12","J13","J14","J15","J16","J17","J18","J19","J20","J21","J22","J23","J24","J25","J26","J27"]
+		siteFullName = ["Kerbin Space Center","AirBase Boneyard","Welcome Island Airport","Smusgrave Airport","Island Airfield","AirBase S05A","CMcAuliffe Airport","AirBase S24A","AirBase N46A","Darude Airport","YGagarin Airport","AirBase S72A","AirBase S37A","Airbase N76A","AirBase S00A","AirBase N32A","C. Yeager Airport","AirBase S28A","VTereshkova Airport","TSC Airport"]
+		siteName = ["KSC","Boneyard","Welcome Island","Smusgrave","the Island","S05A","CMcAuliffe","S24A","N46A","Darude","YGagarin","S72A","S37A","N76A","S00A","N32A","C. Yeager","S28A","VTereshkova","TSC"]
+		siteFlightNumBase = ["J0","J10","J11","J12","J13","J14","J15","J16","J17","J18","J19","J20","J21","J22","J23","J24","J25","J26","J27","J28"]
 	}
 	
 	DATA
     {
         type = List<double>	
-		siteLAT = [0.017773791,-0.956890416,-0.416173965,-6.6561,-1.532006846,-5.2877,10.1012,-24.6466,46.1439647,-6.5048,3.3498,-72.0144,-37.7425,76.0748971,-0.1378,32.7539983,6.006124351,-28.0106,9.7753]
-		siteLON = [-91.80608066,-92.32576718,-86.47342546,-108.2766,-71.90484104,-70.6564,-67.2229,-75.9302,-67.0590557,-144.0283,-153.1668,-76.1025,13.6802,102.2673558,161.9566,30.1138384,26.82942413,134.03,103.9947]
-		terminalLAT = [0.013127532,-0.950248443,-0.416195882,-6.62478406554796,-1.536,-5.300036871,10.09540262,-24.65890472,46.13149738,-6.523899744,3.33256224166561,-72.02672474,-37.75480319,76.06200373,-0.150153962031443,32.74152403,6.026205755,-28.02295837,9.80326571692211]
-		terminalLON = [-91.81077972,-92.32871418,-86.4734156,-108.282336629785,-71.901,-70.64403602,-67.23750763,-75.91671361,-67.04151163,-144.035998,-153.169967890935,-76.06311039,13.6956221,102.332517,161.968728578379,30.12840086,26.84044957,134.0437761,103.969146466016]
+		siteLAT = [0.017773791,-0.956890416,-0.416173965,-6.6561,-1.532006846,-5.2877,10.1012,-24.6466,46.1439647,-6.5048,3.3498,-72.0144,-37.7425,76.0748971,-0.1378,32.7539983,6.006124351,-28.0106,9.7753,-13.6521]
+		siteLON = [-91.80608066,-92.32576718,-86.47342546,-108.2766,-71.90484104,-70.6564,-67.2229,-75.9302,-67.0590557,-144.0283,-153.1668,-76.1025,13.6802,102.2673558,161.9566,30.1138384,26.82942413,134.03,103.9947,51.6226]
+		terminalLAT = [0.013127532,-0.950248443,-0.416195882,-6.62478406554796,-1.536,-5.300036871,10.09540262,-24.65890472,46.13149738,-6.523899744,3.33256224166561,-72.02672474,-37.75480319,76.06200373,-0.150153962031443,32.74152403,6.026205755,-28.02295837,9.80326571692211,-13.646337899245]
+		terminalLON = [-91.81077972,-92.32871418,-86.4734156,-108.282336629785,-71.901,-70.64403602,-67.23750763,-75.91671361,-67.04151163,-144.035998,-153.169967890935,-76.06311039,13.6956221,102.332517,161.968728578379,30.12840086,26.84044957,134.0437761,103.969146466016,51.6281458671887]
 	}
 	
 	DATA
     {
         type = List<int>	
-		siteFltDistance = [0,31,150,491,555,605,732,803,1378,1416,1636,1898,2491,2514,2560,2720,2750,2877,3161]
+		siteFltDistance = [0,31,150,491,555,605,732,803,1378,1416,1636,1898,2491,2514,2560,2720,2750,2877,3161,3020]
 		//Bases by site index number 0 - siteProgresMax variable
-		siteRegionalA =   [0,0,4,5,2,7,8,11,13,10,14,7,5,8,17,6,12,9,9]
-		siteRegionalB =   [0,0,8,9,3,12,16,12,15,14,18,12,16,18,18,16,18,18,16]
+		siteRegionalA =   [0,0,4,5,2,7,8,11,13,10,14,7,5,8,17,6,12,9,9,16]
+		siteRegionalB =   [0,0,8,9,3,12,16,12,15,14,18,12,16,18,18,16,18,18,16,18]
 
     }	
 		
