--- a/GameData/ContractPacks/JNSQ-KSRGAP/Patches/KramaxAutoPilotFlightPlans.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Patches/KramaxAutoPilotFlightPlans.cfg
@@ -7121,6 +7121,165 @@
                 }
             }
         }
+		
+##--Airport---------------------------------------------------------------------------------------------------------
+# ------------------------------------------------------------------
+# TSC Airport
+# ------------------------------------------------------------------
+# Runway   : TSC ILS 09
+# Latitude : -13.6418434644705
+# Longitude: 51.5912996475997
+# Heading  : 90
+# Altitude : 122
+# Glideslope: 7.5
+# ------------------------------------------------------------------
+        FlightPlan:NEEDS[KSCExtended]
+        {
+            planet = Kerbin
+            name = TSC ILS 09 GS 7.5
+            description = TSC Airport
+            WayPoints
+            {
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.53337214
+                    lon = 44.22366820
+                    alt = 12000
+                    name = MAXKY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.61469447
+                    lon = 47.90663995
+                    alt = 10000
+                    name = HIKEY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.63505427
+                    lon = 49.74886394
+                    alt = 6500
+                    name = LOKEY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    IAF = true
+                    lat = -13.64040676
+                    lon = 50.74376641
+                    alt = 3175
+                    name = IAF
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    FAF = true
+                    lat = -13.64138447
+                    lon = 51.11225780
+                    alt = 1858
+                    name = FAF
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    RW = true
+                    lat = -13.64184346
+                    lon = 51.59129965
+                    alt = 147
+                    name = FLARE
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    Stop = true
+                    lat = -13.64184075
+                    lon = 51.62814907
+                    alt = 122
+                    name = STOP
+                }
+            }
+        }		
+
+# ------------------------------------------------------------------
+# Runway   : TSC ILS 27
+# Latitude : -13.6418421326878
+# Longitude: 51.6721441424597
+# Heading  : 270
+# Altitude : 122
+# Glideslope: 7.5
+# ------------------------------------------------------------------
+        FlightPlan:NEEDS[KSCExtended]	
+        {
+            planet = Kerbin
+            name = TSC ILS 27 GS 7.5
+            description = TSC Airport
+            WayPoints
+            {
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.53337082
+                    lon = 59.03977555
+                    alt = 12000
+                    name = MAXKY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.61469314
+                    lon = 55.35680382
+                    alt = 10000
+                    name = HIKEY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    lat = -13.63505294
+                    lon = 53.51457984
+                    alt = 6500
+                    name = LOKEY
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    IAF = true
+                    lat = -13.64040543
+                    lon = 52.51967737
+                    alt = 3175
+                    name = IAF
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    FAF = true
+                    lat = -13.64138314
+                    lon = 52.15118599
+                    alt = 1858
+                    name = FAF
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    RW = true
+                    lat = -13.64184213
+                    lon = 51.67214414
+                    alt = 147
+                    name = FLARE
+                }
+                WayPoint
+                {
+                    Vertical = true
+                    Stop = true
+                    lat = -13.64183942
+                    lon = 51.63529472
+                    alt = 122
+                    name = STOP
+                }
+            }
+        }
 
 ##--Airport---------------------------------------------------------------------------------------------------------
 # ------------------------------------------------------------------
