--- a/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
+++ b/GameData/ContractPacks/JNSQ-KSRGAP/Patches/NavUtilRunways.cfg
@@ -468,7 +468,7 @@ NavUtilRunway
 //-------------------------------------------------------------------
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 09L
 	shortID = JAF09L
 	hdg = 90
@@ -484,7 +484,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 09R
 	shortID = JAF09R
 	hdg = 90
@@ -500,7 +500,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 18L
 	shortID = JAF18L
 	hdg = 180
@@ -516,7 +516,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 18R
 	shortID = JAF18R
 	hdg = 180
@@ -532,7 +532,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 27L
 	shortID = JAF27L
 	hdg = 270
@@ -548,7 +548,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 27R
 	shortID = JAF27R
 	hdg = 270
@@ -564,7 +564,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 36L
 	shortID = JAF36L
 	hdg = 360
@@ -580,7 +580,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = AB S00A ILS 36R
 	shortID = JAF36R
 	hdg = 360
@@ -1499,7 +1499,7 @@ NavUtilRunway
 //-------------------------------------------------------------------
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = S. Musgrave ILS 09
 	shortID = JAQ09
 	hdg = 90
@@ -1515,7 +1515,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = S. Musgrave ILS 27
 	shortID = JAQ27
 	hdg = 270
@@ -1525,6 +1525,42 @@ NavUtilRunway
 	gsLongitude = -108.196594
 	locLatitude = -6.62954044
 	locLongitude = -108.232643
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+
+//-------------------------------------------------------------------
+// TSC - KSC Extended mod
+//-------------------------------------------------------------------
+NavUtilRunway:NEEDS[KSCExtended]
+{
+	custom = False
+	ident = TSC ILS 09
+	shortID = JAT09
+	hdg = 90
+	body = Kerbin
+	altMSL = 122.599998
+	gsLatitude = -13.6418438
+	gsLongitude = 51.591301
+	locLatitude = -13.6418409
+	locLongitude = 51.6281509
+	outerMarkerDist = 10000
+	middleMarkerDist = 2200
+	innerMarkerDist = 200
+}
+NavUtilRunway:NEEDS[KSCExtended]
+{
+	custom = False
+	ident = TSC ILS 27
+	shortID = sID4
+	hdg = 270
+	body = Kerbin
+	altMSL = 123
+	gsLatitude = -13.6418409
+	gsLongitude = 51.672123
+	locLatitude = -13.6418381
+	locLongitude = 51.635273
 	outerMarkerDist = 10000
 	middleMarkerDist = 2200
 	innerMarkerDist = 200
@@ -1605,7 +1641,7 @@ NavUtilRunway
 
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = VTereshkova ILS 09
 	shortID = JAR09
 	hdg = 90
@@ -1621,7 +1657,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = VTereshkova ILS 18
 	shortID = JAR18
 	hdg = 180
@@ -1637,7 +1673,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = VTereshkova ILS 27
 	shortID = JAR27
 	hdg = 270
@@ -1653,7 +1689,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = VTereshkova ILS 36
 	shortID = JAR36
 	hdg = 360
@@ -1674,7 +1710,7 @@ NavUtilRunway
 
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = Y. Gagarin ILS 09 
 	shortID = JAS09
 	hdg = 90
@@ -1690,7 +1726,7 @@ NavUtilRunway
 }
 NavUtilRunway
 {
-	custom = True
+	custom = False
 	ident = Y. Gagarin ILS 27
 	shortID = JAS27
 	hdg = 270
